--- a/app/src/main/res/_A1_invoice/layout/dialog_invoice.xml
+++ b/app/src/main/res/_A1_invoice/layout/dialog_invoice.xml
@@ -31,11 +31,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/double_round"
-
                 android:gravity="center|left"
-
                 android:id="@+id/view_dialog_title"
-
                 android:text="เลือกเมนูใดเมนูหนึ่งด้านล่าง"
                 android:textColor="@color/angel_white"
                 android:textSize="@dimen/dialog_title_header"/>
@@ -45,28 +42,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-
-            android:padding="@dimen/slice_align"
-
-            android:background="@color/angel_white">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
-                    android:gravity="center"
-
-                    android:id="@+id/text_view_invoice_preview"
-
-                    android:textColor="@color/space_gray"
-                    android:textSize="0sp"
-                    android:text=""/>
-
-            </LinearLayout>
+            android:background="@color/shadow_gray"
+            android:paddingTop="@dimen/slice_align"
+            android:paddingBottom="@dimen/slice_align"
+            android:paddingStart="@dimen/round_padding"
+            android:paddingEnd="@dimen/round_padding">
 
             <!--<android.support.v7.widget.CardView-->
                 <!--android:layout_width="match_parent"-->
@@ -86,19 +66,21 @@
 
                     <Button
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
 
                         android:gravity="start|center_vertical"
                         android:paddingStart="@dimen/double_round"
 
                         android:text="สแกนใบสั่งสินค้าเพิ่มเติม"
                         android:textSize="@dimen/font_text_view"
-                        android:textColor="@color/stone_gray"
+                        android:textColor="@color/solid_gray"
 
                         android:id="@+id/btn_more_scan"
 
                         android:layout_marginTop="3dp"
                         android:layout_marginBottom="3dp"
+
+                        android:padding="@dimen/double_round"
 
                         android:background="@color/angel_white"
 
@@ -107,25 +89,23 @@
                         android:drawableStart="@drawable/ic_add_24"
                         android:drawableEnd="@drawable/ic_chevron_24_black_fixed" />
 
-                    <View android:layout_width="match_parent"
-                          android:layout_height="1dp"
-                          android:background="@color/little_light_gray"/>
-
                     <Button
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
 
                         android:gravity="start|center_vertical"
                         android:paddingStart="@dimen/double_round"
 
                         android:text="แสดงรายการที่สแกนแล้ว"
                         android:textSize="@dimen/font_text_view"
-                        android:textColor="@color/stone_gray"
+                        android:textColor="@color/solid_gray"
 
                         android:id="@+id/btn_more_info"
 
                         android:layout_marginTop="3dp"
                         android:layout_marginBottom="3dp"
+
+                        android:padding="@dimen/double_round"
 
                         android:background="@color/angel_white"
 
@@ -134,28 +114,19 @@
                         android:drawableStart="@drawable/ic_list_24"
                         android:drawableEnd="@drawable/ic_chevron_24_black_fixed" />
 
-                   <View android:layout_width="match_parent"
-                         android:layout_height="1dp"
-                         android:background="@color/little_light_gray"/>
-
                     <Button
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/dialog_button_fixed_height"
-
+                        android:layout_height="match_parent"
                         android:gravity="start|center_vertical"
                         android:paddingStart="@dimen/double_round"
-
                         android:text="บันทึกรายการ"
                         android:textSize="@dimen/font_text_view"
-                        android:textColor="@color/stone_gray"
-
+                        android:textColor="@color/solid_gray"
                         android:id="@+id/btn_next"
-
                         android:layout_marginTop="3dp"
                         android:layout_marginBottom="3dp"
-
                         android:background="@color/angel_white"
-
+                        android:padding="@dimen/double_round"
                         android:paddingEnd="@dimen/round_padding"
                         android:drawablePadding="@dimen/double_round"
                         android:drawableStart="@drawable/ic_done_24"
