--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -23,9 +23,9 @@
     <item android:title="เมนูระบบ">
         <menu>
             <item
-                android:id="@+id/nav_test"
-                android:icon="@drawable/ic_menu_share"
-                android:title="ระบบทดสอบ" />
+                android:id="@+id/nav_logout"
+                android:icon="@drawable/ic_subdirectory_arrow_24"
+                android:title="ออกจากระบบ" />
             <!--<item-->
                 <!--android:id="@+id/nav_send"-->
                 <!--android:icon="@drawable/ic_menu_send"-->
