--- a/app/src/main/res/layout/layout_recycler_view.xml
+++ b/app/src/main/res/layout/layout_recycler_view.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/round_padding">
+    android:layout_margin="@dimen/slice_align">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
